# CompetitiveProgramming

Contest2/: cartrouble.java  periodicstrings.java  racingalphabet.java  sibice.java
Final/: baloni.py  gold.java  pizza2.py  watchdog.py
InClassExercises/: bestcompromise.java  jollyjumpers.java  shitori.java  wizardofodds.java
InClassExercises/Week 1/: r2.java  savingdaylight.java
InClassExercises/Week04/: flexible.java  foolingaround.java  pet.java
InClassExercises/Week_1/: fizzbuzz.java  qaly.java
InClassExercises/Week_2/: acm.java  acm.py  cetiri.java  provincesandgold.java
InClassExercises/Week_5/: hindex.java  htoo.py  roompainting.java
InClassExercises/Week_6/: dreamer.java  geppetto.java  veci.java  zagrade.java
InClassExercises/Week_9/: ants.java  grass.py  shopaholic.java  shopaholic.rs  water.java
Katiss_Extra/: borg.java  cd.java  chopwood.java  different.java  falling.java  jackolanternjuxtaposition.java  mostdifficult.java  planethopping.java
Midterm/: bubbletea.java  lawnmower.java  npuzzle.java  proofs.java
haskell/: CHANGELOG.md  aCappellaRecording.hs  acquireHardware.hs  perfect-maze.cabal  perfectMaze.hs  speedLimit.hs
haskell/app/: perfectMazeGUI.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
